# clickpoints

./: .gitignore  .hgignore  .hgsub  .hgsubstate  .readthedocs.yml  .releaseignore  Addon_Strecher.py  AnnotationHandler.py  ClickPoints.bat  ClickPoints.py  ClickPointsBooster.py  ClickPointsQT.py  ConfigClickPoints.txt  ConfigClickPoints_TEMPLATE.txt  ConfigLoad.py  Database.py  FolderBrowser.py  GammaCorrection.py  MANIFEST.in  MakeRelease.py  MarkerHandler.py  MaskHandler.py  Overview.py  PyViewer.py  README.md  README.rst  ScriptLauncher.py  SplashScreen.py  Timeline.py  Tools.py  ToolsForClickPoints.py  VideoExporter.py  annotationhandler.py  annotationoverview.py  get_update.py  install.bat  install_bat.py  install_clickpoints.bat  install_registry.py  install_requirements_with_conda.py  (+10 more)
.github/macos/: entitlements.plist
.github/workflows/: installer.yml  publish.yml  tests.yml
addons/: Addon_Strecher.py  CellDetector.py  DriftCorrection.py  ExportMarkerCountToXLS.py  GrabPlotData.py  Highlight_Objects.py  ManualClassifier.py  Track.py  __init__.py  metaDisplay.py
addons/CellDetector/: Desc.html
addons/DriftCorrection/: DriftCorrection.py  DriftCorrection.txt
addons/Dronpa/: GetIntensities.py
addons/ExportMarkerCountToXLS/: Data.txt  ExportMarkerCountToXLS.py
addons/GrabPlotData/: Data.txt
addons/LayerSorter/: Sorter.py
addons/MeasureTool/: Data.txt  Measure.py
addons/Track/: Data.txt  Track.py
clickpoints/: Addon.py  ClickPoints.py  ClickPointsBooster.py  ConfigClickPoints_TEMPLATE.txt  Core.py  DataFile.py  SendCommands.py  SplashScreen.py  __init__.py  launch.py
clickpoints/addons/: Highlight_Objects.py  ManualClassifier.py  __init__.py  metaDisplay.py
clickpoints/clickpoints/: MemMap.py
clickpoints/icons/: ClickPoints.icns
clickpoints/includes/: BigImageDisplay.py  Config.py  ConfigLoad.py  Database.py  DependencyChecker.py  FilelistLoader.py  ImageQt_Stride.py  MemMap.py  QtShortCuts.py  RegisterRegistry.py  Tools.py  __init__.py  loadExamples.py  loader.py  matplotlibwidget.py  regexpfilefilter.py  setCursor.py  slide.py
clickpoints/modules/: AnnotationHandler.py  ChangeTracker.py  Console.py  FolderBrowser.py  FolderEditor.py  GammaCorrection.py  InfoHud.py  MarkerHandler.py  MaskHandler.py  OptionEditor.py  Overview.py  ScriptLauncher.py  Timeline.py  VideoExporter.py  __init__.py
clickpoints/package/: setup_nodependencies.py
database/: Config.py  ConfigClickPoints.txt  ConfigPathWalker.txt  PathWalker.py  config.txt  database.py  databaseAnnotation.py  databaseBrowser.py  databaseBrowser2.py  databaseFiles.py  matplotlibwidget.py  renameFiles.py
development/: AddCopyright.py  CopyrightNotice.txt  ExportSQLSchema.py  GenerateDoc.py  MakeRelease.py  README.md  RaiseVersion.py  UploadAnaconda.py  UploadPyPi.py  pyapp_clickpoints.nsi  readme.txt  schema.sql
development/pynsist/: header.xcf  (+4 more)
docs/: addon_celldetector.rst  addon_driftcorrection.rst  addon_fluorescence_diffusion.rst  addon_grabplotdata.rst  addon_track.rst  addons.rst  annotations.rst  api.rst  api_addon.rst  autobuild.bat  celldetector.rst  conf.py  driftcorrection.rst  example_countpenguins.rst  example_plantroot.rst  example_simulation.rst  example_tweezer.rst  examples.rst  gammacorrection.rst  general.rst  index.rst  infohud.rst  installation.rst  marker.rst  mask.rst  modules.rst  recipes.rst  recipes_configfiles.rst  recipes_measurement.rst  recipes_openingfiles.rst  recipes_tracking.rst  refs.bib  requirements.readthedocs.txt  timeline.rst  track.rst  tutorial.rst  tutorial_configfiles.rst  tutorial_measurement.rst  tutorial_openingfiles.rst  tutorial_tracking.rst  (+1 more)
includes/: BigImageDisplay.py  Config.py  ConfigLoad.py  Database.py  DependencyChecker.py  FilelistLoader.py  ImageQt_Stride.py  MemMap.py  OptionEditor.py  QtShortCuts.py  Tools.py  ToolsForClickPoints.py  __init__.py  regexpfilefilter.py
installation/: install_bat.py  install_clickpoints.bat  install_clickpoints_package.bat  install_registry.py  pip_req.txt  uninstall_old_reg.bat  uninstall_registry_old.py
modules/: AnnotationHandler.py  Console.py  FolderBrowser.py  GammaCorrection.py  InfoHud.py  MarkerHandler.py  MaskHandler.py  OptionEditor.py  Overview.py  ScriptLauncher.py  Timeline.py  VideoExporter.py  __init__.py
package/: setup.py  setup_nodependencies.py
tests/: BaseTest.py  ClickPointsTest.py  TestResults.py  TestServer.py  Test_AnnotationHandler.py  Test_DataFile.py  Test_Launch.py  Test_MarkerHandler.py  Test_MaskHandler.py  Test_MediaHandler.py
tools/: SendCommands.py  setup.py
update/: __init__.py  get_update.py  lastNotifiedLogger.py  updateHandler.py
(+229 files in other folders)
