[tool.poetry]
name = "clickpoints"
version = "1.10.0"
description = "Scientific toolbox for manual and automatic image evaluation."
authors = ["Richard Gerum <richard.gerum@fau.de>", "Sebastian Richter <57496278+foxsr@users.noreply.github.com>"]
maintainers = ["Alexander Winterl <alexander.winterl@fau.de>"]
repository = "https://github.com/fabrylab/clickpoints"
documentation = "https://clickpoints.readthedocs.io/"
license = "GPLv3"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
matplotlib = "*"
imageio = ">=2.0.1"
QtPy = "*"
QtAwesome = "*"
qimage2ndarray = "*"
Pillow = "*"
peewee = ">= 3.1"
natsort = "*"
tifffile = ">=2020.2.16"
imagecodecs = "*"
sortedcontainers = "*"
psutil = "*"
imageio-ffmpeg = "*"
qasync = "*"
pyqt5 = "5.15.11"
pyqt5-qt5 = "=5.15.2"
python-dateutil = ">=2.8.1"
scikit-image = ">=0.14"
sphinx-rtd-theme = { version = "^1.1.1", optional = true }
sphinxcontrib-bibtex = { version = "^2.5.0", optional = true }
sphinxcontrib-svg2pdfconverter = { version = "^1.2.1", optional = true }
nbsphinx = { version = "^0.8.9", optional = true }
mock = { version = "^4.0.3", optional = true }
scipy = "^1.15.2"
opencv-python = { version = "^4.11.0.86", optional = true }


[tool.poetry.extras]
docs = ["sphinx-rtd-theme", "sphinxcontrib-bibtex", "sphinxcontrib-svg2pdfconverter", "nbsphinx", "mock"]


[tool.poetry.scripts]
clickpoints = "clickpoints.launch:main"


[tool.poetry.group.dev.dependencies]
pytest-qt = "^4.2.0"
pyinstaller = "^6.12"
auto-py-to-exe = "^2.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
