[project]
name = "clickpoints"
version = "1.10.0"
description = "Scientific toolbox for manual and automatic image evaluation."
authors = [
    { name = "Richard Gerum", email = "richard.gerum@fau.de" },
    { name = "Sebastian Richter", email = "57496278+foxsr@users.noreply.github.com" },
]
maintainers = [
    { name = "Alexander Winterl", email = "alexander.winterl@fau.de" },
]
readme = "README.rst"
license = "GPL-3.0-only"
requires-python = ">=3.10,<3.14"
dependencies = [
    "imagecodecs",
    "imageio>=2.0.1",
    "imageio-ffmpeg",
    "matplotlib",
    "natsort",
    "opencv-python>=4.11.0.86,<5.0.0.0",
    "peewee>=3.1",
    "pillow",
    "pip",
    "psutil",
    "pyside6>=6.8.2.1,<7.0.0.0",
    "python-dateutil>=2.8.1",
    "qimage2ndarray",
    "qtawesome",
    "qtpy",
    "scikit-image>=0.14",
    "scipy>=1.15.2,<2.0.0",
    "sortedcontainers",
    "tifffile>=2020.2.16",
]

[project.urls]
Repository = "https://github.com/fabrylab/clickpoints"
Documentation = "https://clickpoints.readthedocs.io/"

[project.optional-dependencies]
docs = [
    "mock>=4.0.3,<5.0.0",
    "nbsphinx>=0.8.9,<0.9.0",
    "sphinx-rtd-theme>=1.1.1,<2.0.0",
    "sphinxcontrib-bibtex>=2.5.0,<3.0.0",
    "sphinxcontrib-svg2pdfconverter>=1.2.1,<2.0.0",
]

[project.scripts]
clickpoints = "clickpoints.launch:main"

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.33.0,<3.0.0",
    "pyinstaller>=6.12,<7.0",
    "pytest-qt>=4.2.0,<5.0.0",
]

[tool.pytest.ini_options]
python_files = ["Test_*.py"]

[tool.setuptools.package-data]
clickpoints = [
    "*.txt",
    "icons/*",
]

[tool.setuptools.packages.find]
include = ["clickpoints*"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
